--- a/Week-1/day5/Mini Project/bigmobile.css
+++ b/Week-1/day5/Mini Project/bigmobile.css
@@ -129,95 +129,6 @@ body {
         border-radius: 2px;
     }
 
-.fa-solid:hover {
-    background-color:green;
-    color: aliceblue;
-
-}
-
-    .fa-eye:hover::after {
-        content: 'Quick View';
-        font-size: 10px;
-        white-space: nowrap;
-        width: 70px;
-        justify-content: center;
-        padding: 8px;
-        border-radius: 8px;
-        color: #fff;
-        background-color: black;
-        display: flex;
-        position: relative;
-        right: 30px;
-        bottom: 70px;
-        opacity: 1;
-    }
-
-
-    .fa-bag-shopping:hover::after {
-        content: 'Add To Wishlist';
-        font-size: 10px;
-        white-space: nowrap;
-        width: 110px;
-        justify-content: center;
-        padding: 8px;
-        border-radius: 8px;
-        color: #fff;
-        background-color: black;
-        display: flex;
-        position: relative;
-        right: 50px;
-        bottom: 70px;
-        opacity: 1;
-    }
-
-
-    .fa-cart-shopping:hover::after {
-        content: 'Add To Cart';
-        font-size: 10px;
-        white-space: nowrap;
-        width: 80px;
-        justify-content: center;
-        padding: 8px;
-        border-radius: 8px;
-        color: #fff;
-        background-color: black;
-        display: flex;
-        position: relative;
-        right: 40px;
-        bottom: 70px;
-        opacity: 1;
-    }
-
-
-
-.one {
-    background-image: url(image1.png);
-    background-size: cover;
-}
-
-
-.two {
-    background-image: url(image2.png);
-    background-size: cover;
-}
-
-
-.three {
-    background-image: url(image3.png);
-    background-size: cover;
-}
-
-
-.four {
-    background-image: url(image4.png);
-    background-size: cover;
-}
-
-.five {
-    background-image: url(image5.webp);
-    background-size: cover;
-}
-
 .new, .per {
     height: 100px;
     width: 100px;
@@ -252,13 +163,7 @@ body {
     cursor: pointer;
     justify-content: center;
   }
-
-  button:hover {
-    background-color: green;
-    color: aliceblue;
-  }
   
-
 #footermain {
     background-color: black;
     color: aliceblue;
@@ -269,8 +174,61 @@ body {
     margin-top: 20px;
   }
 
-
   h4{
     font-size: 2em;
     margin-top: 10px;
   }
+
+
+form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.modal-content {
+
+    background-color: #fefefe;
+    border: 1px solid #888;
+    margin: 25% auto 5% auto;
+    width: 80%; 
+    display: flex;
+    font-size: x-large;
+    justify-content: center;
+    align-items: center;
+  }
+
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
+  body {
+    height: 80vh;
+
+  }
+
+input {
+    width: 80%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: flex;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    font-size: large;
+
+    
+  }
+
+
+  input[type=submit] {
+    background-color: #04AA6D;
+    color: white;
+    padding: 15px;
+    border: none;
+    cursor: pointer;
+    width: 20%;
+    justify-content: center;
+  }
+  
