--- a/Week-1/day5/Mini Project/products.css
+++ b/Week-1/day5/Mini Project/products.css
@@ -88,6 +88,8 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    background-position: center;
+    border-radius: 5px;
 
 }
 
