--- a/PortfolioProject/style.css
+++ b/PortfolioProject/style.css
@@ -1,13 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 
-body {
-    font-family: "SF UI Text", "Helvetica Neue", "Segoe UI", "Oxygen", "Ubuntu", "Cantarell", "Open Sans", sans-serif;
-    -webkit-font-smoothing: antialiased;
-}
 .body {
     height: 100vh;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow', sans-serif;
+    font-family: "Lucida Console", "Courier New", monospace;
+    font-weight: bold;
+}
 
+.languages {
+    font-family: "Lucida Console", "Courier New", monospace;
 }
 
 #getKnow {
@@ -91,46 +91,19 @@ img {
 .portfolio .card {
     height: 200px;
 }
-    
-    .contact input {
-        background: #fff;
-        border: 1px solid #fff;
-        border-radius: 3px;
-        box-shadow: none;
-        color: #232434;
-        font-size: 16px;
-        height: 60px;
-        margin: 10px;
-        width: 100%;
-        font-family: 'poppins', sans-serif;
-        padding-left: 30px;
-        -webkit-transition: all 0.3s ease 0s;
-        -o-transition: all 0.3s ease 0s;
-        transition: all 0.3s ease 0s;
+
+@media only screen and (max-width: 992px) and (min-width: 500px) {
+    .portfolio .card {
+        height: 150px;
     }
+    .portfolio img {
+        min-width: 100%;
+        min-height: 100%;
+        position:absolute;
+        height: 150px;
     
-    .contact textarea {
-        background: #fff;
-        border: 1px solid #fff;
-        border-radius: 3px;
-        -webkit-box-shadow: none;
-        box-shadow: none;
-        color: #232434;
-        font-size: 16px;
-        margin: 10px;
-        width: 100%;
-        font-family: 'poppins', sans-serif;
-        padding-left: 30px;
-        -webkit-transition: all 0.3s ease 0s;
-        -o-transition: all 0.3s ease 0s;
-        transition: all 0.3s ease 0s;
     }
-    
-    .form-control::placeholder {
-        color: #232434;
-        opacity: 1;
-    }
-    
+  }
 
 
 .blog .card img {
@@ -139,44 +112,58 @@ img {
 }
 
 .blog .card {
-    height: 500px;
+    height: 400px;
 }
 
-    .btn-contact-bg {
-        border-radius: 30px;
-        color: #fff;
-        margin: 10px;
-        margin-top: 20px;
-        margin-bottom: 20px;
-        outline: medium none !important;
-        padding: 15px 27px;
-        text-transform: capitalize;
-        -webkit-transition: all 0.3s ease 0s;
-        -o-transition: all 0.3s ease 0s;
-        transition: all 0.3s ease 0s;
-        font-family: 'poppins', sans-serif;
-        cursor: pointer;
-        width: 100%;
-    }
+.contact textarea, .contact input {
+    background: #fff;
+    border: 1px solid #fff;
+    border-radius: 3px;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    color: #232434;
+    font-size: 16px;
+    margin: 10px;
+    width: 100%;
+    padding-left: 30px;
+    -webkit-transition: all 0.3s ease 0s;
+    -o-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+}
+
+.contact input {
+    height: 60px;    
+ }  
     
-    .btn-contact-bg:hover,
-    .btn-contact-bg:focus {
-        background: rgb(72, 0, 0);
-        color: #fff;
-    }
+.form-control::placeholder {
+    color: #47154f;
+    opacity: 1;
+}
     
-    /*START ADDRESS*/
+.btn-contact-bg {
+    border-radius: 30px;
+    background: rgb(72, 0, 0);
+    color: #fff;
+    margin: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    outline: medium none !important;
+    padding: 15px 27px;
+    text-transform: capitalize;
+    -webkit-transition: all 0.3s ease 0s;
+    -o-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+    font-family: 'poppins', sans-serif;
+    cursor: pointer;
+    width: 100%;
+}
     
-    .single_address {
-        overflow: hidden;
-        margin-bottom: 10px;
-    }
-    
-    @media only screen and (max-width:768px) {
-        .single_address {
-            padding-left: 0px;
-        }
-    }
+.btn-contact-bg:hover,
+.btn-contact-bg:focus {
+    background: white;
+    color: rgb(203, 129, 226);
+}
+
     
     .single_address i {
         background: #f6f6f6;
@@ -190,37 +177,10 @@ img {
         box-shadow: 0 5px 30px 0 rgba(0, 0, 0, 0.1);
         margin: 10px;
     }
-    
-    
-    .single_address h4 {
-        font-size: 18px;
-        margin-bottom: 0px;
-        overflow: hidden;
-        font-weight: 600;
+
+    .single_address i:hover {
+        -webkit-box-shadow: 20px 20px 30px 20px rgba(0, 0, 0, 0.2);
+        box-shadow: 20px 20px 30px 12px rgba(0, 0, 0, 0.2);
     }
     
-    .single_address p {
-        overflow: hidden;
-        margin-top: 5px;
-    }
-    
-    .section-title h1 {
-        font-size: 44px;
-        font-weight: 500;
-        margin-top: 0;
-        position: relative;
-        text-transform: capitalize;
-        margin-bottom: 15px;
-    }
-    .section-title p {
-        padding: 0 10px;
-        width: 70%;
-        margin: auto;
-        letter-spacing: 1px;
-    }
-    .section-title {
-        margin-bottom: 60px;
-    }
-    .text-center {
-        text-align: center!important;
-    }
+
