--- a/week-6/Hackaton/style.css
+++ b/week-6/Hackaton/style.css
@@ -22,13 +22,18 @@ body {
   padding: 0;
 }
 
+#logo {
+  height: 5px;
+  margin: 10px;
+  color: rgb(255, 255, 241);
+}
 #searchTextField {
   display: flex;
   margin: auto;
-  height: 40px;
+  height: 35px;
   width: 200px;
-  margin: 10px auto;
-  background-color: lightgoldenrodyellow;
+  margin: 7px auto;
+  background-color: rgb(255, 255, 241);
   text-align: center;
   font-weight: bolder;
   border-radius: 6px;
@@ -36,18 +41,22 @@ body {
   ;}
 
   .card {
-    background-color: lightgoldenrodyellow;
+    background-color: rgb(255, 255, 241);
     margin: 10px;
     border-radius: 10px;
-    padding: 10px;
+    padding: 5px;
+    cursor: pointer;
+    width: 20vw;
+    height: 30vh;
+
 
   }
 #button {
   display: block;
-  height: 40px;
+  height: 35px;
   width: 200px;
   margin: 10px auto;
-  background-color: lightgoldenrodyellow;
+  background-color:rgb(255, 255, 241);
   text-align: center;
   font-weight: bolder;
   border-radius: 6px;
@@ -218,4 +227,15 @@ body {
   border-width: 10px;
   border-style: solid;
   border-color:  transparent transparent slateblue transparent ;
+}
+
+
+.light {
+  animation: blinker 1s linear infinite;
+}
+
+@keyframes blinker {
+  50% {
+    opacity: 0;
+  }
 }
